# Workspace root for the Rust transcribe port (//transcribe_rs/).
# Crates are siblings; BUILD files live alongside each Cargo.toml.

# Export the workspace manifests + lockfile so the crate_universe extension
# in MODULE.bazel can read them from labels.
exports_files(
    [
        "Cargo.toml",
        "Cargo.lock",
        # //tools/bazel:version_consistency_test reads this file as a
        # data dep at runtime, so it has to be visible as a normal file
        # label too (loading it via `load(...)` for the Starlark const
        # doesn't expose it as a file).
        "version.bzl",
    ],
    visibility = ["//visibility:public"],
)
