[workspace]
resolver = "2"
members = [
    "caption-schema",
    "caption-core",
    "transcribe-rs",
    "embed-rs",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.0.1"
# Mirror the project version so any binary `--version` flag matches the
# Electron app and the .captions_json5 schema_version we emit. Bumped
# alongside APP_VERSION (see ../CLAUDE.md Version Management).
publish = false

[workspace.dependencies]
# Shared deps — workspace-pinned so every crate gets the same version
# (and Cargo's resolver picks one copy in the build graph).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
clap = { version = "4", features = ["derive"] }
eyre = "0.6"
thiserror = "2"
hound = "3.5"
ndarray = "0.17"
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "rustls-tls"] }
# ort rc.12 matches what parakeet-rs 0.3 pins. Aligning across the workspace
# keeps Cargo from picking two onnxruntime native libs.
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "api-24"] }
knf-rs = "0.3"
parakeet-rs = { version = "0.3", default-features = false, features = ["cpu", "ort-defaults"] }
insta = { version = "1", features = ["json", "yaml"] }
