# The `run_in_workspace.sh` script is referenced as `srcs` by every
# sh_test target in this repo (see //:BUILD.bazel and friends). Each
# downstream target is responsible for listing its own `data` and
# tags; this file just publishes the script.
load("@rules_shell//shell:sh_test.bzl", "sh_test")

exports_files(
    [
        "run_in_workspace.sh",
        "run_playwright.sh",
        "run_coverage.sh",
        "pytest_main.py",
    ],
    visibility = ["//visibility:public"],
)

# Asserts that the ASR_COMMIT_HASH literal in electron/constants.ts
# matches the one in transcribe/constants.py. Bumped together in the
# two-commit release dance documented in CLAUDE.md → "Version
# Management"; this test makes drift loud at `bazel test //...` time
# rather than weeks later when someone notices `.captions_json5` blob
# URLs pointing at a different commit than what `uvx` actually fetched.
#
# DEPRECATION: ASR_COMMIT_HASH is being replaced by APP_VERSION (see
# `version_consistency_test` below). This test stays as long as
# transcribe/ Python still exists; deletes when Python is removed.
sh_test(
    name = "asr_commit_hash_consistency_test",
    size = "small",
    srcs = ["check_asr_commit_hash.sh"],
    data = [
        "//:electron/constants.ts",
        "//transcribe:constants.py",
    ],
    deps = [":runfiles"],
)

# Asserts APP_VERSION matches across electron/constants.ts,
# transcribe_rs/version.bzl, and transcribe_rs/Cargo.toml. These three
# must stay in lockstep: the Electron app downloads
# `transcribe-rs-v${APP_VERSION}-darwin-arm64` from the GitHub Release,
# the Rust binaries stamp `--version` from version.bzl via CARGO_PKG_VERSION,
# and Cargo.toml is the cargo-side version for `cargo build` outside Bazel.
sh_test(
    name = "version_consistency_test",
    size = "small",
    srcs = ["check_version_consistency.sh"],
    data = [
        "//:electron/constants.ts",
        "//transcribe_rs:Cargo.toml",
        "//transcribe_rs:version.bzl",
    ],
    deps = [":runfiles"],
)

# Shared runfiles dep for the wrapper script. Re-exported as an alias
# so downstream BUILD files can write `deps = ["//tools/bazel:runfiles"]`
# instead of hardcoding the bazel_tools label.
alias(
    name = "runfiles",
    actual = "@bazel_tools//tools/bash/runfiles",
    visibility = ["//visibility:public"],
)
