[package]
name = "caption-schema"
edition.workspace = true
license.workspace = true
version.workspace = true
publish.workspace = true
description = "Serde mirror of transcribe/schema.py and src/types/schema.ts."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"
