load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary")

exports_files(
    ["Cargo.toml"],
    visibility = ["//visibility:public"],
)

rust_binary(
    name = "embed-rs",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    deps = all_crate_deps(normal = True) + [
        "//transcribe_rs/caption-schema:caption_schema",
    ],
    visibility = ["//visibility:public"],
)
