load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary")

exports_files(
    ["Cargo.toml"],
    visibility = ["//visibility:public"],
)

rust_binary(
    name = "transcribe-rs",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    deps = all_crate_deps(normal = True) + [
        "//transcribe_rs/caption-schema:caption_schema",
        "//transcribe_rs/caption-core:caption_core",
    ],
    visibility = ["//visibility:public"],
)
